--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
 
   <dependencies>
 	<dependency>
+    	<groupId>net.anotheria</groupId>
+    	<artifactId>ano-util</artifactId>
+    	<version>1.0.0-SNAPSHOT</version>
+	</dependency>	
+
+	<dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>servlet-api</artifactId>
     	<version>2.5</version>
