--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,16 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>anotheria.net taglibs</name>
 
+  <build>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/etc/tld</directory>
+        <targetPath>META-INF</targetPath>
+      </resource>
+    </resources>
+</build>
+  
+
   <dependencies>
 	<dependency>
     	<groupId>net.anotheria</groupId>
@@ -23,11 +33,13 @@
     	<groupId>javax.servlet</groupId>
     	<artifactId>servlet-api</artifactId>
     	<version>2.5</version>
+    	<scope>provided</scope>
 	</dependency>	
 	<dependency>
-    	<groupId>javax.servlet</groupId>
+    	<groupId>javax.servlet.jsp</groupId>
     	<artifactId>jsp-api</artifactId>
-    	<version>2.0</version>
+    	<version>2.1</version>
+    	<scope>provided</scope>
 	</dependency>	
 	<dependency>
 	  <groupId>commons-beanutils</groupId>
