Implemented choose and otherwise tags. Added unittests for all conditional-tags.

--- a/ivy.xml
+++ b/ivy.xml
@@ -12,5 +12,8 @@
         <dependency org="org.apache" name="log4j" rev="stable" transitive="false"/>
 		<dependency org="org.apache.commons" name="commons-beanutils" rev="stable" transitive="false"/>
 		<dependency org="anotheria.net" name="ano-util" rev="latest" transitive="true" changing="true"/>
+    
+    	<!-- Needed by unit tests: -->
+        <dependency org="org" name="junit" rev="stable" transitive="false"/>
     </dependencies>
 </ivy-module>
