--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,58 @@
 	<dependency>
 	  <groupId>commons-beanutils</groupId>
 	  <artifactId>commons-beanutils</artifactId>
+	</dependency>
+	
+	<!--  dependencies for taglib junit tests -->
+	<dependency>
+	  <groupId>org.mortbay.jetty</groupId>
+	  <artifactId>jetty</artifactId>
+	  <version>6.1.26</version> 
 	</dependency>	
+	<dependency>
+	  <groupId>org.mortbay.jetty</groupId>
+	  <artifactId>jetty-util</artifactId>
+	  <version>6.1.26</version>
+	</dependency>	
+	<dependency>
+	  <groupId>org.mortbay.jetty</groupId>
+	  <artifactId>jetty-servlet-tester</artifactId>
+	  <version>6.1.26</version>
+	</dependency>	
+	
+	<dependency>
+      <groupId>tomcat</groupId>
+      <artifactId>jasper-compiler</artifactId>
+      <version>5.5.15</version> 
+    </dependency>
+	<dependency>
+      <groupId>tomcat</groupId>
+      <artifactId>jasper-compiler-jdt</artifactId>
+      <version>5.5.15</version>
+	</dependency>
+	<dependency>
+      <groupId>tomcat</groupId>
+      <artifactId>jasper-runtime</artifactId>
+      <version>5.5.15</version>
+    </dependency>
+	
+	<dependency>
+      <groupId>commons-el</groupId>
+      <artifactId>commons-el</artifactId>
+      <version>1.0</version> 
+	</dependency>
+	
+	<dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.6.2</version>  
+	</dependency>
+	<dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xmlParserAPIs</artifactId>
+      <version>2.6.2</version>
+	</dependency>
+	
   </dependencies>
 
 	<scm>
