--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	<dependency>
     	<groupId>net.anotheria</groupId>
     	<artifactId>ano-util</artifactId>
-    	<version>1.0.6</version>
+    	<version>1.0.10-SNAPSHOT</version>
 	</dependency>	
 
 	<dependency>
