--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>ano-tags</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.4-SNAPSHOT</version>
   <name>anotheria.net taglibs</name>
 
   <build>
@@ -26,16 +26,18 @@
 	<dependency>
     	<groupId>net.anotheria</groupId>
     	<artifactId>ano-util</artifactId>
-    	<version>1.0.11-SNAPSHOT</version>
+    	<version>1.0.11</version>
 	</dependency>	
 
 	<dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>servlet-api</artifactId>
+    	<scope>provided</scope>
 	</dependency>	
 	<dependency>
     	<groupId>javax.servlet.jsp</groupId>
     	<artifactId>jsp-api</artifactId>
+    	<scope>provided</scope>
 	</dependency>	
 	<dependency>
 	  <groupId>commons-beanutils</groupId>
@@ -47,32 +49,38 @@
 	  <groupId>org.mortbay.jetty</groupId>
 	  <artifactId>jetty</artifactId>
 	  <version>6.1.26</version> 
+	  <scope>test</scope>
 	</dependency>	
 	<dependency>
 	  <groupId>org.mortbay.jetty</groupId>
 	  <artifactId>jetty-util</artifactId>
 	  <version>6.1.26</version>
+	  <scope>test</scope>
 	</dependency>	
 	<dependency>
 	  <groupId>org.mortbay.jetty</groupId>
 	  <artifactId>jetty-servlet-tester</artifactId>
 	  <version>6.1.26</version>
+	  <scope>test</scope>
 	</dependency>	
 	
 	<dependency>
       <groupId>tomcat</groupId>
       <artifactId>jasper-compiler</artifactId>
       <version>5.5.15</version> 
+	  <scope>test</scope>
     </dependency>
 	<dependency>
       <groupId>tomcat</groupId>
       <artifactId>jasper-compiler-jdt</artifactId>
       <version>5.5.15</version>
+	  <scope>test</scope>
 	</dependency>
 	<dependency>
       <groupId>tomcat</groupId>
       <artifactId>jasper-runtime</artifactId>
       <version>5.5.15</version>
+	  <scope>test</scope>
     </dependency>
 	
 	<dependency>
