--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
 	<groupId>net.anotheria</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.0</version>
+	<version>2.2</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -26,7 +26,7 @@
 	<dependency>
     	<groupId>net.anotheria</groupId>
     	<artifactId>ano-util</artifactId>
-    	<version>2.0.0</version>
+    	<version>2.1.0</version>
 	</dependency>	
 
 	<dependency>
@@ -99,7 +99,17 @@
       <artifactId>xmlParserAPIs</artifactId>
       <version>2.6.2</version>
 	</dependency>
-	
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <scope>test</scope>
+      </dependency>
+
+
   </dependencies>
 
 	<scm>
