--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.anotheria</groupId>
   <artifactId>ano-tags</artifactId>
-  <version>2.1.0</version>
+  <version>2.1.1-SNAPSHOT</version>
   <name>anotheria.net taglibs</name>
 
   <build>
@@ -113,8 +113,8 @@
   </dependencies>
 
 	<scm>
-		<url>svn:svn://svn.anotheria.net/opensource/ano-tags/tags/ano-tags-2.1.0</url>
-		<connection>scm:svn:svn://svn.anotheria.net/opensource/ano-tags/tags/ano-tags-2.1.0</connection>
-		<developerConnection>scm:svn:svn://svn.anotheria.net/opensource/ano-tags/tags/ano-tags-2.1.0</developerConnection>
+		<url>svn:svn://svn.anotheria.net/opensource/ano-tags/trunk</url>
+		<connection>scm:svn:svn://svn.anotheria.net/opensource/ano-tags/trunk</connection>
+		<developerConnection>scm:svn:svn://svn.anotheria.net/opensource/ano-tags/trunk</developerConnection>
 	</scm>
 </project>
