--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
 	<groupId>net.anotheria</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.2</version>
+	<version>2.8</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -26,7 +26,7 @@
 	<dependency>
     	<groupId>net.anotheria</groupId>
     	<artifactId>ano-util</artifactId>
-    	<version>2.1.0</version>
+    	<version>2.1.6</version>
 	</dependency>	
 
 	<dependency>
@@ -113,8 +113,8 @@
   </dependencies>
 
 	<scm>
-		<url>svn:svn://svn.anotheria.net/opensource/ano-tags/trunk</url>
-		<connection>scm:svn:svn://svn.anotheria.net/opensource/ano-tags/trunk</connection>
-		<developerConnection>scm:svn:svn://svn.anotheria.net/opensource/ano-tags/trunk</developerConnection>
+		<url>git:https://github.com/anotheria/ano-tags</url>
+		<connection>scm:git:git@github.com:anotheria/ano-tags.git</connection>
+		<developerConnection>scm:git:git@github.com:anotheria/ano-tags.git</developerConnection>
 	</scm>
 </project>
