--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>net.anotheria</groupId>
 			<artifactId>ano-util</artifactId>
-			<version>2.1.6</version>
+			<version>2.2.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
